# azure-updates-mcp

./: README.md  main.py  pyproject.toml
scripts/: install.ps1  install.sh
src/azure_updates_mcp/: __init__.py  cli.py  client.py  server.py
tests/: test_cli.py  test_client.py  test_installers.py  test_server.py
