[project]
name = "azure-updates-mcp"
version = "0.1.0"
description = "MCP server for Azure Updates"
readme = "README.md"
authors = [
    { name = "aryxenv", email = "aryanshah0514@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
]

[project.scripts]
azure-updates-mcp = "azure_updates_mcp.cli:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
